new background image

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   <![endif]-->
   <style>
     .skillLogo{
-      height: 8vh;
+      height: 9vh;
     }
     .topBuffer{
-      margin-top: 7%;
+      margin-top: 8%;
     }
   </style>
 </head>
@@ -98,7 +98,7 @@
   <div class="container">
     <section id="skills" class="skills">
       <div class="box">
-        <h2 class="section-title text-center">Skills</h2>
+        <h2 class="section-title text-center">My Skills</h2>
         <div class="clearfix"></div>
         <div class="cbp-1-grid-masonry">
           <div class="row">
@@ -449,7 +449,7 @@
 <script src="style/js/plugins.js"></script> 
 <script src="style/js/scripts.js"></script>  
 <script>
-	$.backstretch(["style/images/art/BoulderCityscape.jpg"]);
+	$.backstretch(["style/images/mountain_landscape.jpeg"]);
 </script>
 </body>
 </html>
