--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <div class="container">
     <section id="skills" class="skills">
       <div class="box">
-        <h2 class="section-title text-center">My Skills</h2>
+        <h2 class="section-title text-center">Skills</h2>
         <div class="clearfix"></div>
         <div class="cbp-1-grid-masonry">
           <div class="row">
