added live/github links to project images

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
     .textShadow{
       text-shadow: 3px 2px 6px black;
     }
+    .liveLink{
+      position: absolute;
+      left: 25%;
+    }
+    .gitLink{
+      position: absolute;
+      right: 25%;
+    }
   </style>
 </head>
 <body class="full-layout">
@@ -165,93 +173,66 @@
         <div class="clearfix"></div>
         <div id="grid-container" class="cbp-l-grid-masonry">
           <ul>
-            <li class="cbp-item frame architecture"> <a class="cbp-caption cbp-singlePage" href="ajax/post1.html">
+            <li class="cbp-item frame still-life cbp-caption">
               <div class="cbp-caption-defaultWrap"> <img src="style/images/oladaa.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Thumbnail Slider</div>
+                    <a target="_blank" href="https://dev.seanmeedev.com">
+                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                    </a>
+                    <a href="#">
+                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                    </a>
                   </div>
                 </div>
               </div>
-              </a> 
             </li>
-            <li class="cbp-item frame macro"> <a class="cbp-caption cbp-singlePage" href="ajax/post2.html">
+            <li class="cbp-item frame still-life cbp-caption">
               <div class="cbp-caption-defaultWrap"> <img src="style/images/grab_a_beer.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Fullscreen Gallery</div>
+                    <a target="_blank" href="https://dev.seanmeedev.com">
+                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                    </a>
+                    <a href="#">
+                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                    </a>
                   </div>
                 </div>
               </div>
-              </a> 
             </li>
-            <li class="cbp-item frame portrait"> <a class="cbp-caption cbp-singlePage" href="ajax/post3.html">
+            <li class="cbp-item frame still-life cbp-caption">
               <div class="cbp-caption-defaultWrap"> <img src="style/images/shaolin_busters.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Multiple Images</div>
+                    <a target="_blank" href="https://dev.seanmeedev.com">
+                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                    </a>
+                    <a href="#">
+                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                    </a>
                   </div>
                 </div>
               </div>
-              </a> 
             </li>
-            <li class="cbp-item frame still-life"> <a class="cbp-caption cbp-singlePage" href="ajax/post4.html">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/art/ps1.jpg" alt=""> </div>
+            <li class="cbp-item frame still-life cbp-caption">
+              <div class="cbp-caption-defaultWrap"> <img src="style/images/calculator.png" alt=""> </div>
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Fullwidth Video</div>
+                    <a target="_blank" href="https://dev.seanmeedev.com">
+                      <span class="cbp-l-caption-title liveLink">Live Site</span>
+                    </a>
+                    <a href="#">
+                      <span class="cbp-l-caption-title gitLink">GitHub</span>
+                    </a>
                   </div>
                 </div>
               </div>
-              </a> 
             </li>
-            <li class="cbp-item frame architecture"> <a class="cbp-caption cbp-singlePage" href="ajax/post1.html">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/art/pa2.jpg" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Thumbnail Slider</div>
-                  </div>
-                </div>
-              </div>
-              </a> 
-            </li>
-            <li class="cbp-item frame macro"> <a class="cbp-caption cbp-singlePage" href="ajax/post2.html">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/art/pm2.jpg" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Fullscreen Gallery</div>
-                  </div>
-                </div>
-              </div>
-              </a> 
-            </li>
-            <li class="cbp-item frame portrait"> <a class="cbp-caption cbp-singlePage" href="ajax/post3.html">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/art/pp2.jpg" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Multiple Images</div>
-                  </div>
-                </div>
-              </div>
-              </a> 
-            </li>
-            <li class="cbp-item frame still-life"> <a class="cbp-caption cbp-singlePage" href="ajax/post4.html">
-              <div class="cbp-caption-defaultWrap"> <img src="style/images/art/ps2.jpg" alt=""> </div>
-              <div class="cbp-caption-activeWrap">
-                <div class="cbp-l-caption-alignCenter">
-                  <div class="cbp-l-caption-body">
-                    <div class="cbp-l-caption-title">Fullwidth Video</div>
-                  </div>
-                </div>
-              </div>
-              </a> </li>
           </ul>
         </div>
         <!-- /.cbp-l-grid-masonry -->
