--- a/index.html
+++ b/index.html
@@ -24,27 +24,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
   <style>
-    .skillLogo{
-      height: 9vh;
-    }
-    .topBuffer{
-      margin-top: 8%;
-    }
-    .smallText{
-      font-size: 2em;
-      font-family: 'Roboto', sans-serif;
-    }
-    .textShadow{
-      text-shadow: 3px 2px 6px black;
-    }
-    .liveLink{
-      position: absolute;
-      left: 25%;
-    }
-    .gitLink{
-      position: absolute;
-      right: 25%;
-    }
+
   </style>
 </head>
 <body class="full-layout">
@@ -267,7 +247,7 @@
         <h2 class="section-title">Who is Behind All This</h2>
         <div class="row">
 	      <div class="col-md-5 col-md-push-7 col-sm-12">
-            <figure class="frame"><img src="style/images/art/about.jpg" alt="" /></figure>
+            <figure class="frame"><img src="https://scontent-sjc2-1.xx.fbcdn.net/v/t1.0-9/421324_10151155081396192_1853102715_n.jpg?oh=fc8f9196bb8128dc945d0f70d6d1776b&oe=59B2D757" alt="" /></figure>
           </div>
           <!-- /column -->
           <div class="col-md-7 col-md-pull-5 col-sm-12">
@@ -291,21 +271,21 @@
         <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
         <div class="divide20"></div>
         <div class="row text-center services-2">
-          <div class="col-md-3 col-sm-6"> <i class="budicon-map"></i>
-            <p>Moon Street Light Avenue <br />
-              14/05 Jupiter, JP 80630</p>
+          <div id="address" class="col-md-3 col-sm-6"> <i class="budicon-map"></i>
+            <!--<p>Moon Street Light Avenue <br />-->
+              <!--14/05 Jupiter, JP 80630</p>-->
           </div>
-          <div class="col-md-3 col-sm-6"> <i class="budicon-telephone"></i>
-            <p>00 (123) 456 78 90 <br />
-              00 (987) 654 32 10 </p>
+          <div id="home_phone" class="col-md-3 col-sm-6"> <i class="budicon-telephone"></i>
+            <!--<p>00 (123) 456 78 90 <br />-->
+              <!--00 (987) 654 32 10 </p>-->
           </div>
-          <div class="col-md-3 col-sm-6"> <i class="budicon-mobile"></i>
-            <p>00 (123) 456 78 90 <br />
-              00 (987) 654 32 10 </p>
+          <div id="cell_phone" class="col-md-3 col-sm-6"> <i class="budicon-mobile"></i>
+            <!--<p>00 (123) 456 78 90 <br />-->
+              <!--00 (987) 654 32 10 </p>-->
           </div>
-          <div class="col-md-3 col-sm-6"> <i class="budicon-mail"></i>
-            <p> <a class="nocolor" href="mailto:#">manager@email.com</a> <br />
-              <a class="nocolor" href="mailto:#">asistant@email.com</a> </p>
+          <div id="email" class="col-md-3 col-sm-6"> <i class="budicon-mail"></i>
+            <!--<p> <a class="nocolor" href="mailto:#">manager@email.com</a> <br />-->
+              <!--<a class="nocolor" href="mailto:#">asistant@email.com</a> </p>-->
           </div>
         </div>
         <!-- /.services-2 -->
