pulling to server

--- a/index.html
+++ b/index.html
@@ -53,10 +53,7 @@
       <div class="divide20"></div>
       <ul class="social">
         <li><a target="_blank" href="https://twitter.com/SeanMee1"><i class="icon-s-twitter"></i></a></li>
-        <li><a href="#"><i class="icon-s-facebook"></i></a></li>
-        <li><a href="#"><i class="icon-s-instagram"></i></a></li>
-        <li><a href="#"><i class="icon-s-flickr"></i></a></li>
-        <li><a href="#"><i class="icon-s-pinterest"></i></a></li>
+        <li><a target="_blank" href="https://github.com/SeanMee86"><i class="icon-s-github"></i></a></li>
         <li><a target="_blank" href="https://www.linkedin.com/in/seanmee86/"><i class="icon-s-linkedin"></i></a></li>
       </ul>
     </div>
@@ -164,10 +161,10 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <a target="_blank" href="https://dev.seanmeedev.com">
+                    <a target="_blank" href="https:/www.oladaa.com">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
-                    <a href="#">
+                    <a target="_blank" href="https://github.com/Learning-Fuze/C2.17_fitbit_companion">
                       <span class="cbp-l-caption-title gitLink">GitHub</span>
                     </a>
                   </div>
@@ -179,10 +176,10 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <a target="_blank" href="https://dev.seanmeedev.com">
+                    <a target="_blank" href="https://dev.seanmeedev.com/grab_a_beer">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
-                    <a href="#">
+                    <a target="_blank" href="https://github.com/enuber/C2.17_hackathon">
                       <span class="cbp-l-caption-title gitLink">GitHub</span>
                     </a>
                   </div>
@@ -194,10 +191,10 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <a target="_blank" href="https://dev.seanmeedev.com">
+                    <a target="_blank" href="https://dev.seanmeedev.com/ShaolinBusters">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
-                    <a href="#">
+                    <a target="_blank" href="https://github.com/miashore/C2.17_tictactoe">
                       <span class="cbp-l-caption-title gitLink">GitHub</span>
                     </a>
                   </div>
@@ -212,7 +209,7 @@
                     <a target="_blank" href="https://dev.seanmeedev.com">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
-                    <a href="#">
+                    <a href="https://github.com/SeanMee86/calculator">
                       <span class="cbp-l-caption-title gitLink">GitHub</span>
                     </a>
                   </div>
@@ -348,13 +345,9 @@
     <footer class="footer box">
       <p class="pull-left">© 2015 Lumos. All rights reserved. Theme by <a href="http://elemisfreebies.com">elemis</a>.</p>
       <ul class="social pull-right">
-        <li><a href="#"><i class="icon-s-rss"></i></a></li>
-        <li><a href="#"><i class="icon-s-twitter"></i></a></li>
-        <li><a href="#"><i class="icon-s-facebook"></i></a></li>
-        <li><a href="#"><i class="icon-s-dribbble"></i></a></li>
-        <li><a href="#"><i class="icon-s-pinterest"></i></a></li>
-        <li><a href="#"><i class="icon-s-instagram"></i></a></li>
-        <li><a href="#"><i class="icon-s-vimeo"></i></a></li>
+        <li><a target="_blank" href="https://twitter.com/SeanMee1"><i class="icon-s-twitter"></i></a></li>
+        <li><a target="_blank" href="https://github.com/SeanMee86"><i class="icon-s-github"></i></a></li>
+        <li><a target="_blank" href="https://www.linkedin.com/in/seanmee86/"><i class="icon-s-linkedin"></i></a></li>
       </ul>
       <div class="clearfix"></div>
     </footer>
