--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <a href="https:/www.oladaa.com">
+                    <a target="_blank" href="https://www.oladaa.com">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/Learning-Fuze/C2.17_fitbit_companion">
