--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <a target="_blank" href="https://dev.seanmeedev.com/ShaolinBusters">
+                    <a target="_blank" href="https://dev.seanmeedev.com/shaolin_busters">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
                     <a target="_blank" href="https://github.com/miashore/C2.17_tictactoe">
