--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			data-endelementdelay="0"
 			data-endspeed="100"
 			data-endeasing="Power1.easeOut"
-			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">I specialize in database management and server-side engineering.</h1>
+			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">I'm a back/front end developer with a passion for database management and server-side engineering.</h1>
             <div class="arrow smooth">
               <a href="#skills">
                 <i class="icon-down-open-big"></i>
