broke apart the landing page

--- a/index.html
+++ b/index.html
@@ -76,7 +76,17 @@
 			data-endelementdelay="0"
 			data-endspeed="100"
 			data-endeasing="Power1.easeOut"
-			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">I'm a back/front end developer with a passion for database management and server-side engineering.</h1>
+			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">I'm a back/front end developer with a passion</h1>
+            <h1 class="tp-caption smallText tp-fade fadeout tp-resizeme textShadow" data-x="center" data-y="320" data-voffset="25" data-speed="100"
+                data-start="2500"
+                data-easing="Power4.easeOut"
+                data-splitin="chars"
+                data-splitout="chars"
+                data-elementdelay="0.03"
+                data-endelementdelay="0"
+                data-endspeed="100"
+                data-endeasing="Power1.easeOut"
+                style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">for database management and server-side engineering.</h1>
             <div class="arrow smooth">
               <a href="#skills">
                 <i class="icon-down-open-big"></i>
