added link for calculator

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <a target="_blank" href="https://dev.seanmeedev.com">
+                    <a target="_blank" href="https://dev.seanmeedev.com/calculator">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
                     <a href="https://github.com/SeanMee86/calculator">
