--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <a target="_blank" href="https://dev.seanmeedev.com">
+                    <a target="_blank" href="https://dev.seanmeedev.com/dks_memory_match">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
-                    <a href="#">
+                    <a href="https://github.com/SeanMee86/memory_match">
                       <span class="cbp-l-caption-title gitLink">GitHub</span>
                     </a>
                   </div>
