added targets to portfolio links

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <a target="_blank" href="https://dev.seanmeedev.com/calculator">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
-                    <a href="https://github.com/SeanMee86/calculator">
+                    <a target="_blank" href="https://github.com/SeanMee86/calculator">
                       <span class="cbp-l-caption-title gitLink">GitHub</span>
                     </a>
                   </div>
@@ -234,7 +234,7 @@
                     <a target="_blank" href="https://dev.seanmeedev.com/dks_memory_match">
                       <span class="cbp-l-caption-title liveLink">Live Site</span>
                     </a>
-                    <a href="https://github.com/SeanMee86/memory_match">
+                    <a target="_blank" href="https://github.com/SeanMee86/memory_match">
                       <span class="cbp-l-caption-title gitLink">GitHub</span>
                     </a>
                   </div>
