--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			data-endelementdelay="0"
 			data-endspeed="100"
 			data-endeasing="Power1.easeOut"
-			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">I'm a back/front end developer with a passion</h1>
+			style="z-index: 3; max-width: auto; max-height: auto; white-space: nowrap;">I'm a front and back end developer with a passion</h1>
             <h1 class="tp-caption smallText tp-fade fadeout tp-resizeme textShadow" data-x="center" data-y="320" data-voffset="25" data-speed="100"
                 data-start="2500"
                 data-easing="Power4.easeOut"
@@ -258,10 +258,10 @@
           </div>
           <!-- /column -->
           <div class="col-md-7 col-md-pull-5 col-sm-12">
-            <p class="lead">Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna. </p>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Fusce dapibus, tellus. </p>
-            <p>Tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Aenean lacinia bibendum nulla sed consectetur. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Nullam id dolor id nibh ultricies vehicula ut id elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-            <p>Fermentum massa justo sit amet risus. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Etiam porta sem malesuada magna mollis euismod. Aenean lacinia bibendum nulla.</p>
+            <p class="lead">Hello and welcome to my portfolio. My name is Sean and I design and build web applications. </p>
+            <p>I've been interested in computer technologies for as long as I can remember. I started building websites at the age of 11 and rediscovered my passion for coding while managing large sets of data during an internship at Cal State Fullerton.</p>
+            <p>After discussions with friends and family that are in the tech industry about how I could combine my passions for code and data management I was led towards back-end development.  As someone who enjoys it when things work the way they are supposed to I quickly took to the concept of working on the server-side.</p>
+            <p>I decided to completely devote myself to becoming a developer and recently completed an advanced web development program called LearningFuze where I built multiple applications in a real world team environment that utilized languages such as JavaScript, PHP, MySQL, Ubuntu, HTML, CSS, React.js, etc.</p>
           </div>
           <!-- /column -->
         </div>
@@ -275,7 +275,7 @@
     <section id="contact">
       <div class="box">
         <h2 class="section-title">Get in Touch with Me</h2>
-        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Maecenas sed diam eget risus varius blandit sit amet non magna. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+        <p>I am interested in any new and exciting ways to test and grow my skills as a developer. Feel free to call or email with any opportunities you have where my skills can be of help.</p>
         <div class="divide20"></div>
         <div class="row text-center services-2">
           <div id="address" class="col-md-3 col-sm-6"> <i class="budicon-map"></i>
