--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
     <!-- /#contact -->
     
     <footer class="footer box">
-      <p class="pull-left">© 2015 Lumos. All rights reserved. Theme by <a href="http://elemisfreebies.com">elemis</a>.</p>
+      <p class="pull-left">© 2017 Sean Mee. All rights reserved</p>
       <ul class="social pull-right">
         <li><a target="_blank" href="https://twitter.com/SeanMee1"><i class="icon-s-twitter"></i></a></li>
         <li><a target="_blank" href="https://github.com/SeanMee86"><i class="icon-s-github"></i></a></li>
