--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
   <![endif]-->
   <style>
-
+    .about{
+      text-align: justify;
+    }
   </style>
 </head>
 <body class="full-layout">
@@ -257,7 +259,7 @@
             <figure class="frame"><img src="https://scontent-sjc2-1.xx.fbcdn.net/v/t1.0-9/421324_10151155081396192_1853102715_n.jpg?oh=fc8f9196bb8128dc945d0f70d6d1776b&oe=59B2D757" alt="" /></figure>
           </div>
           <!-- /column -->
-          <div class="col-md-7 col-md-pull-5 col-sm-12">
+          <div class="col-md-7 col-md-pull-5 col-sm-12 about">
             <p class="lead">Hello and welcome to my portfolio. My name is Sean and I design and build web applications. </p>
             <p>I've been interested in computer technologies for as long as I can remember. I started building websites at the age of 11 and rediscovered my passion for coding while managing large sets of data during an internship at Cal State Fullerton.</p>
             <p>After discussions with friends and family that are in the tech industry about how I could combine my passions for code and data management I was led towards back-end development.  As someone who enjoys it when things work the way they are supposed to I quickly took to the concept of working on the server-side.</p>
