--- a/index.html
+++ b/index.html
@@ -261,9 +261,9 @@
           <!-- /column -->
           <div class="col-md-7 col-md-pull-5 col-sm-12 about">
             <p class="lead">Hello and welcome to my portfolio. My name is Sean and I design and build web applications. </p>
-            <p>I've been interested in computer technologies for as long as I can remember. I started building websites at the age of 11 and rediscovered my passion for coding while managing large sets of data during an internship at Cal State Fullerton.</p>
-            <p>After discussions with friends and family that are in the tech industry about how I could combine my passions for code and data management I was led towards back-end development.  As someone who enjoys it when things work the way they are supposed to I quickly took to the concept of working on the server-side.</p>
-            <p>I decided to completely devote myself to becoming a developer and recently completed an advanced web development program called LearningFuze where I built multiple applications in a real world team environment that utilized languages such as JavaScript, PHP, MySQL, Ubuntu, HTML, CSS, React.js, etc.</p>
+            <p>I've had an interest in computer technologies for as long as I can remember. I started learning html and building websites at the age of 11.  During an internship at Cal State Fullerton I managed large sets of data.  I found a passion for data management and organization.</p>
+            <p>I wanted to find a way to combine my love of coding and data handling.  I decided to seek advice from friends and family in the tech industry.  That was how I found out about back-end development.  I soon found my calling working with server-side coding languages. </p>
+            <p>I decided to put all my time into finding a career in an industry that I find fulfillment in.  I enrolled myself in an advanced web development program called LearningFuze.  There I built many applications in a real world team environment.  These applications used languages such as JavaScript, PHP, MySQL, HTML, CSS, React.js, etc. </p>
           </div>
           <!-- /column -->
         </div>
