updated styling and added descriptions for projects

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
                     <p class="cbp-l-caption-title captionTitle">Oladaa</p>
-                    <p>A local event finder specifically geared towards FitBit users.</p>
+                    <p>An app designed to help FitBit users find local events based on their interests and activity level.</p>
                     <a target="_blank" href="https://www.oladaa.com">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
@@ -185,8 +185,8 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
-                    <p>A local event finder specifically geared towards FitBit users.</p>
+                    <p class="cbp-l-caption-title captionTitle">Grab A Beer</p>
+                    <p>An app designed to find restaurants and bars serving a users choice of beer near their current or desired location.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/grab_a_beer">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
@@ -202,8 +202,8 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
-                    <p>A local event finder specifically geared towards FitBit users.</p>
+                    <p class="cbp-l-caption-title captionTitle">Shaolin Busters</p>
+                    <p>An online tic-tac-toe game that implements password match making for users to play with their friends.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/shaolin_busters">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
@@ -219,8 +219,8 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
-                    <p>A local event finder specifically geared towards FitBit users.</p>
+                    <p class="cbp-l-caption-title captionTitle">Calculator</p>
+                    <p>An easy to use online calculator that performs basic arithmetic for the user.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/calculator">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
@@ -236,8 +236,8 @@
               <div class="cbp-caption-activeWrap">
                 <div class="cbp-l-caption-alignCenter">
                   <div class="cbp-l-caption-body">
-                    <p class="cbp-l-caption-title captionTitle">Oladaa</p>
-                    <p>A local event finder specifically geared towards FitBit users.</p>
+                    <p class="cbp-l-caption-title captionTitle">Memory Match</p>
+                    <p>A memory match card game based on the characters from the FromSoft games Dark Souls and Bloodborne.</p>
                     <a target="_blank" href="https://dev.seanmeedev.com/dks_memory_match">
                       <span class="cbp-l-caption-title liveLink captionLink btn btn-primary">Live Site</span>
                     </a>
