--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
 <meta name="author" content="">
-<link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/commons/4/47/Ice1filteredk3b.png">
+<link rel="shortcut icon" href="style/images/sm_logo.png">
 <title>Sean Mee's Portfolio</title>
 <!-- Bootstrap core CSS -->
 <link href="style/css/bootstrap.min.css" rel="stylesheet">
